# recruit_crawler

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
browser_extension/: background.js  content.js  manifest.json  popup.html  popup.js
config/: live_sources.sample.json  sample_config.json
docs/: README.md  chrome_extension_capture.md  decisions.md  index.md  model_context_extraction_report.md  source_access_review_template.md  source_access_reviews.md  source_collection_matrix.md  source_search_logic.md  status.md
fixtures/: live_quality_holdout_v2.json  live_quality_tuning_v2.json  postings.json  relevance_cases.json
tests/: test_browser_evidence.py  test_capture_import.py  test_capture_quality.py  test_codex_thread_context.py  test_codex_thread_context_g002.py  test_codex_thread_runtime_wiring.py  test_codex_thread_security.py  test_context_doctor.py  test_core_model_audit.py  test_dry_run.py  test_feedback_cli.py  test_http_safety.py  test_identity.py  test_jd_parser.py  test_jobkorea_detail.py  test_jobkorea_discovery.py  test_jobkorea_required_detail.py  test_jumpit_adapter.py  test_linkedin_adapter.py  test_live_context_cli.py  test_live_quality_reference.py  test_model_context_cache_g003.py  test_model_context_extraction.py  test_model_context_ranking.py  test_pipeline_flows.py  test_pipeline_live_flows.py  test_rallit_adapter.py  test_relevance.py  test_report_rendering.py  test_report_writer.py  test_repository_harness.py  test_rocketpunch_adapter.py  test_saramin_adapter.py  test_scheduled_policy.py  (+12 more)
(+66 files in other folders)
