[project]
name = "recruit-crawler"
version = "0.1.0"
description = "Local no-network recruiting fixture dry-run pipeline"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
recruit-crawler = "recruit_crawler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
