[project]
name = "recruit-crawler"
version = "0.1.0"
description = "Local no-network recruiting fixture dry-run pipeline"
requires-python = ">=3.10"
dependencies = ["pypdf>=4.0.0", "python-docx>=1.1.0"]

[project.scripts]
recruit-crawler = "recruit_crawler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
